Part3 id属性とclass属性

--- a/03.id属性とclass属性/styles.css
+++ b/03.id属性とclass属性/styles.css
@@ -1,3 +1,49 @@
 /* 6つのp要素に適用するスタイルを宣言 */
+.back-blue {
+    background-color: blue;
+}
+
+.white {
+    color: white;
+}
+
+.yellow {
+    color: yellow;
+}
+
+.red {
+    color: red;
+}
 
 /* 6つのli要素に適用するスタイルを宣言 */
+.yellow {
+    color: yellow;
+}
+
+.blue {
+    color: blue;
+}
+
+.red {
+    color: red;
+}
+
+.back-gray {
+    background-color: gray;
+}
+
+.back-green {
+    background-color: green;
+}
+
+.back-brown {
+    background-color: brown;
+}
+
+li {
+    font-size: 16px;
+}
+
+#fontsize-small {
+    font-size: 12px;
+}
